<?xml version="1.0"?>
<package format="2">
  <name>gudrun</name>
  <version>0.0.0</version>
  <description>All code for the robot "Gudrun".</description>

  <maintainer email="tom@tombertalan.com">Tom Bertalan</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>ackermann_msgs</depend>
  <depend>openni_camera</depend>
  <depend>openni_launch</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>python-tensorflow-pip</depend>
  <depend>cv_bridge</depend>


</package>
