<?xml version="1.0"?>
<package format="2">
  <name>gudrun_sensors</name>
  <version>0.0.0</version>
  <description>The gudrun_sensors package</description>

  <maintainer email="tom@tombertalan.com">Tom Bertalan</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <!--   <doc_depend>doxygen</doc_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <depend>openni_camera</depend>
  <depend>openni_launch</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>ssensor_msgs</depend>

</package>
